html is ready, css and js not yet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>JS 003 Modal</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+
+
+        <button class="openModalBtn">Open Modal</button>
+
+        <div class="modal open">
+            <div class="modal-overlay"></div>
+            <div class="modal-content">
+                <h1>Hello world!</h1>
+                <p>Kliknij gdziekolwiek w Modal aby zamknąć okno!</p>
+            </div>
+        </div>
+
+
+
+
+		<script src="./script.js"></script>
+	</body>
 </html>
