--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <button class="openModalBtn">Open Modal</button>
 
-        <div class="modal open">
+        <div class="modal">
             <div class="modal-overlay"></div>
             <div class="modal-content">
                 <h1>Hello world!</h1>
-                <p>Kliknij gdziekolwiek w Modal aby zamknąć okno!</p>
+                <p>Kliknij gdziekolwiek aby zamknąć okno!</p>
             </div>
         </div>
 
